<resources>

    <!-- MAIN STRINGS -->
    <string name="app_name">StereoacuityMultiTestApp</string>
    <string name="locateo">Loca Teo</string>
    <string name="action_settings">Settings</string>
    <string name='doctor'>Doctor</string>
    <string name="username">Username</string>

    <!-- ACTIVITY TITLES -->
    <string name="title_activity_login">LOGIN</string>
    <string name="title_activity_main">MAIN MENU</string>
    <string name="title_activity_patient">CHOOSE PATIENT</string>
    <string name="title_test_activity">TEST</string>
    <string name="title_results">RESULTS</string>
    <string name="title_settings">SETTINGS</string>
    <string name="title_choose_image">CHOOSE AN IMAGE FOR THE TEST</string>
    <string name="title_create_patient">CREATE PATIENT</string>
    <string name="title_main_patient">CHOOSE PATIENT</string>
    <string name="title_test_results">TEST RESULT</string>
    <string name="title_no_reg_patient">PATIENT WITHOUT REGISTRATION</string>

    <!-- BUTTONS STRINGS -->
    <string name="btn_choose_patient">Choose patient</string>
    <string name="btn_test">Start Test</string>
    <string name="btn_settings">Settings</string>
    <string name='btn_logout'>Logout</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_back">Back</string>
    <string name="btn_reset">Reset</string>

    <string name="btn_change">CHANGE IMAGE</string>
    <string name="btn_set">SET IMAGE</string>

    <string name="btn_start_test">START TEST</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_quit">QUIT</string>
    <string name="btn_skip">SKIP</string>

    <string name="btn_retry">Retry connecting to the servlet</string>

    <string name="msg_delete_file">Delete file</string>

    <string name="btn_return_menu">Return to menu</string>
    <string name="btn_enter_without_reg">ENTER WITHOUT REGISTRATION</string>

    <!-- LABELS AND MESSAGES -->
    <string name="welcomemessage">Welcome to Stereoacuity Multi Test App. </string>
    <string name="action_noregtest">Try without registration</string>
    <string name="reg_doctor">Registered Doctor</string>
    <string name="new_doctor">Register as a new doctor</string>

    <string name="msg_alert_settings">Change these settings carefully</string>
    <string name="msg_information">Information</string>
    <string name="msg_zero">0</string>
    <string name="msg_sx">LEFT</string>
    <string name="msg_dx">RIGHT</string>

    <string name="choose_imageset">CHOOSE AN IMAGESET</string>
    <string name="choose_image">CHOOSE AN IMAGE</string>

    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>

    <string name="msg_search_patient">Search patient</string>

    <string name="msg_demo">DEMO</string>

    <string name="insert_name">INSERT THE PATIENT NAME</string>
    <string name="insert_surname">INSERT THE PATIENT SURNAME</string>

    <!-- LOGIN -->
    <string name="prompt_email">Mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_mail">This mail address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions"</string>

    <!-- SETTINGS -->
    <string name="setting_name_screendistance">Distance (cm)</string>
    <string name="setting_name_maxdisparity">Maximum disparity (pixel)</string>
    <string name="setting_name_mindisparity">Minimum disparity (pixel)</string>
    <string name="setting_name_imageset">IMAGE SET:</string>
    <string name="left_eye">LEFT EYE:</string>
    <string name="right_eye">RIGHT EYE:</string>
    <string name="red_color">RED COLOR:</string>
    <string name="blue_color">BLUE COLOR:</string>
    <string name="green_color">GREEN COLOR:</string>
    <string name="reg_user">Registered User</string>
    <string name="severity">Severity</string>

    <!-- IMAGESETS-->
    <string-array name="imageset">
        <item>LANG</item>
        <item>LEA</item>
        <item>LEA_CONTOUR</item>
        <item>LETTERS</item>
        <item>PACMAN</item>
        <item>TNO</item>
    </string-array>

    <!-- IMAGES LANG-->
    <string-array name="lang">
        <item>BIRD</item>
        <item>CAR</item>
        <item>CAT</item>
        <item>CIRCLE</item>
        <item>MAN</item>
        <item>STAR</item>
    </string-array>

    <!-- IMAGES LEA-->
    <string-array name="lea">
        <item>APPLE</item>
        <item>CIRCLE</item>
        <item>HOUSE</item>
        <item>SQUARE</item>
    </string-array>

    <!-- IMAGES LEA_CONTOUR-->
    <string-array name="lea_contour">
        <item>CONTOUR_APPLE</item>
        <item>CONTOUR_CIRCLE</item>
        <item>CONTOUR_HOUSE</item>
        <item>CONTOUR_SQUARE</item>
    </string-array>

    <!-- IMAGES LETTERS-->
    <string-array name="letters">
        <item>LETTER A</item>
        <item>LETTER C</item>
        <item>LETTER E</item>
        <item>LETTER K</item>
        <item>LETTER M</item>
        <item>LETTER Z</item>
    </string-array>

    <!-- IMAGES PACMAN-->
    <string-array name="pacman">
        <item>PACMAN DOWN</item>
        <item>PACMAN LEFT</item>
        <item>PACMAN RIGHT</item>
        <item>PACMAN UP</item>
    </string-array>

    <!-- IMAGES TNO-->
    <string-array name="tno">
        <item>CIRCLE</item>
        <item>SQUARE</item>
        <item>STAR</item>
        <item>TRIANGLE</item>
    </string-array>

</resources>